@@ -1,0 +1,102 @@
+// TortoiseSVN - a Windows shell extension for easy version control
+
+// Copyright (C) 2008 - TortoiseSVN
+
+// This program is free software; you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 2
+// of the License, or (at your option) any later version.
+
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License
+// along with this program; if not, write to the Free Software Foundation,
+// 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+//
+#pragma once
+#include "stdafx.h"
+#include "ConflictEditorCommand.h"
+#include "SVNStatus.h"
+#include "SVNDiff.h"
+#include "UnicodeUtils.h"
+#include "AppUtils.h"
+#include "EditPropConflictDlg.h"
+
+bool ConflictEditorCommand::Execute()
+{
+	CTSVNPath merge = cmdLinePath;
+	CTSVNPath directory = merge.GetDirectory();
+	bool bRet = false;
+
+	// we have the conflicted file (%merged)
+	// now look for the other required files
+	SVNStatus stat;
+	stat.GetStatus(merge);
+	if ((stat.status == NULL)||(stat.status->entry == NULL))
+		return false;
+
+	if (stat.status->text_status == svn_wc_status_conflicted)
+	{
+		// we have a text conflict, use our merge tool to resolve the conflict
+
+		CTSVNPath theirs(directory);
+		CTSVNPath mine(directory);
+		CTSVNPath base(directory);
+		bool bConflictData = false;
+
+		if (stat.status->entry->conflict_new)
+		{
+			theirs.AppendPathString(CUnicodeUtils::GetUnicode(stat.status->entry->conflict_new));
+			bConflictData = true;
+		}
+		if (stat.status->entry->conflict_old)
+		{
+			base.AppendPathString(CUnicodeUtils::GetUnicode(stat.status->entry->conflict_old));
+			bConflictData = true;
+		}
+		if (stat.status->entry->conflict_wrk)
+		{
+			mine.AppendPathString(CUnicodeUtils::GetUnicode(stat.status->entry->conflict_wrk));
+			bConflictData = true;
+		}
+		else
+		{
+			mine = merge;
+		}
+		if (bConflictData)
+			bRet = !!CAppUtils::StartExtMerge(base,theirs,mine,merge);
+	}
+
+	if (stat.status->prop_status == svn_wc_status_conflicted)
+	{
+		// we have a property conflict
+		CTSVNPath prej(directory);
+		if (stat.status->entry->prejfile)
+		{
+			prej.AppendPathString(CUnicodeUtils::GetUnicode(stat.status->entry->prejfile));
+			// there's a problem: the prej file contains a _description_ of the conflict, and
+			// that description string might be translated. That means we have no way of parsing
+			// the file to find out the conflicting values.
+			// The only thing we can do: show a dialog with the conflict description, then
+			// let the user either accept the existing property or open the property edit dialog
+			// to manually change the properties and values. And a button to mark the conflict as
+			// resolved.
+			CEditPropConflictDlg dlg;
+			dlg.SetPrejFile(prej);
+			dlg.SetConflictedItem(merge);
+			dlg.DoModal();
+		}
+	}
+
+	if (stat.status->tree_conflicted)
+	{
+		// we have a tree conflict
+	}
+
+	return bRet;
+}
+
+
